tests/purs/failing/RowLacks.out
Error found:
in module [33mMain[0m
at tests/purs/failing/RowLacks.purs:16:9 - 16:66 (line 16, column 9 - line 16, column 66)

  No type class instance was found for
  [33m                              [0m
  [33m  Prim.Row.Lacks "x"          [0m
  [33m                 ( x :: Int   [0m
  [33m                 , y :: Int   [0m
  [33m                 , z :: String[0m
  [33m                 )            [0m
  [33m                              [0m

while applying a function [33mlacksX[0m
  of type [33mLacks @t1 "x" t2 => Proxy @(Row t1) t2 -> Proxy @(Row t3) (() @t3)[0m
  to argument [33mProxy[0m
while checking that expression [33mlacksX Proxy[0m
  has type [33mProxy @(Row t0) (() @t0)[0m
in value declaration [33mtest1[0m

where [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type
      [33mt3[0m is an unknown type
      [33mt2[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

